---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-06-22
  Bugfixes:
    - Fixed inconsistent tick comparison after the simulation has been paused at least once
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-05-26
  Features:
    - Added keyboard shortcut to get the edit tool directly (disabled by default)
  Changes:
    - Refactored the mod structure to improve performace and simplicity
    - Switched from RaiLuaLib to FLib
    - Switched to double quotes everywhere
    - Minor GUI style cleanup for 0.18.27
  Bugfixes:
    - Fixed that a player's tilegrids and data would remain behind if they were removed
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-04-07
  Changes:
    - Removed lualib and made it a separate mod, RaiLuaLib
    - Updated changelog formatting
  Bugfixes:
    - Fixed a crash when setting the textfield on the draw GUI to an invalid value right after opening the GUI
    - Fixed that if the mod was removed, any existing highlight boxes or tutorial bubbles would remain behind, staying forever
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-01-29
  Changes:
    - Unlocked the adjust button in multiplayer, as the base game bug caused by using it has been fixed
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-01-29
  Changes:
    - Moved most of the migrations to on_configuration_changed
    - Moved util file out of the lualib folder
    - Updated thumbnail