@@ -6,6 +6,6 @@
   "contact": "Discord: Raiguard#7402",
   "homepage": "https://github.com/raiguard/Factorio-Tapeline",
   "factorio_version": "0.18",
-  "dependencies": ["base >= 0.18.14", "flib >= 0.1.0"],
+  "dependencies": ["base >= 0.18.33", "flib >= 0.1.0"],
   "description": "Measure distances or create a flat surface to do work on. Make temporary measurements, or create persistent measurements that can be adjusted, moved, or deleted."
 }
