@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash related to GUI style changes in Factorio 0.18.33
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2020-06-22
